@@ -24,12 +24,20 @@ import com.baomidou.mybatisplus.core.toolkit.CollectionUtils;
 import com.baomidou.mybatisplus.core.toolkit.StringUtils;
 import com.baomidou.mybatisplus.core.toolkit.Wrappers;
 import com.baomidou.mybatisplus.core.toolkit.support.SFunction;
+import com.baomidou.mybatisplus.extension.plugins.MybatisPlusInterceptor;
+import com.baomidou.mybatisplus.extension.plugins.inner.DataChangeRecorderInnerInterceptor;
+import com.baomidou.mybatisplus.extension.plugins.inner.InnerInterceptor;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.test.h2.entity.H2User;
 import com.baomidou.mybatisplus.test.h2.enums.AgeEnum;
 import com.baomidou.mybatisplus.test.h2.service.IH2UserService;
 import net.sf.jsqlparser.parser.CCJSqlParserUtil;
 import net.sf.jsqlparser.statement.select.Select;
+import org.apache.ibatis.exceptions.TooManyResultsException;
+import org.apache.ibatis.plugin.Interceptor;
+import org.apache.ibatis.session.Configuration;
+import org.apache.ibatis.session.SqlSessionFactory;
+import org.apache.ibatis.session.defaults.DefaultSqlSessionFactory;
 import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -44,6 +52,13 @@ import java.util.*;
 
 /**
  * Mybatis Plus H2 Junit Test
+ * JDK 8 run test:
+ * <p>"Error: Could not create the Java Virtual Machine."</p>
+ * <p>Go to build.gradle: remove below configuration:</p>
+ * <p>
+ * //  jvmArgs += ["--add-opens", "java.base/java.lang=ALL-UNNAMED",
+ * //                    "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED"]
+ * </p>
  *
  * @author Caratacus
  * @since 2017/4/1
@@ -55,6 +70,24 @@ class H2UserTest extends BaseTest {
 
     @Autowired
     protected IH2UserService userService;
+    @Autowired
+    SqlSessionFactory sqlSessionFactory;
+
+    public void initBatchLimitation(int limitation) {
+        if (sqlSessionFactory instanceof DefaultSqlSessionFactory) {
+            Configuration configuration = sqlSessionFactory.getConfiguration();
+            for (Interceptor interceptor : configuration.getInterceptors()) {
+                if (interceptor instanceof MybatisPlusInterceptor) {
+                    List<InnerInterceptor> innerInterceptors = ((MybatisPlusInterceptor) interceptor).getInterceptors();
+                    for (InnerInterceptor innerInterceptor : innerInterceptors) {
+                        if (innerInterceptor instanceof DataChangeRecorderInnerInterceptor) {
+                            ((DataChangeRecorderInnerInterceptor) innerInterceptor).setBatchUpdateLimit(limitation).openBatchUpdateLimitation();
+                        }
+                    }
+                }
+            }
+        }
+    }
 
     @Test
     @Order(1)
@@ -231,7 +264,24 @@ class H2UserTest extends BaseTest {
             System.out.println(u.getName() + "," + u.getAge() + "," + u.getVersion());
             Assertions.assertEquals(u.getPrice().setScale(2, RoundingMode.HALF_UP).intValue(), BigDecimal.ZERO.setScale(2, RoundingMode.HALF_UP).intValue(), "all records should be updated");
         }
+        try {
+            initBatchLimitation(3);
+            userService.update(new H2User().setPrice(BigDecimal.ZERO), null);
+            Assertions.fail("SHOULD NOT REACH HERE");
+        } catch (Exception e) {
+            e.printStackTrace();
+            Assertions.assertTrue(checkIsDataUpdateLimitationException(e));
+        }
+    }
 
+    private boolean checkIsDataUpdateLimitationException(Throwable e) {
+        if (e instanceof DataChangeRecorderInnerInterceptor.DataUpdateLimitationException) {
+            return true;
+        }
+        if (e.getCause() == null) {
+            return false;
+        }
+        return checkIsDataUpdateLimitationException(e.getCause());
     }
 
     @Test
@@ -545,7 +595,7 @@ class H2UserTest extends BaseTest {
 //        userService.removeById("100000");
         userService.removeById(h2User);
         userService.removeByIds(Arrays.asList(10000L, h2User));
-        userService.removeByIds(Arrays.asList(10000L, h2User),false);
+        userService.removeByIds(Arrays.asList(10000L, h2User), false);
     }
 
     @Test
@@ -559,6 +609,13 @@ class H2UserTest extends BaseTest {
     }
 
     @Test
+    void testPageNegativeSize() {
+        Page page = Page.of(1, -1);
+        userService.lambdaQuery().page(page);
+        Assertions.assertEquals(page.getTotal(), 0);
+    }
+
+    @Test
     void testDeleteByFill() {
         H2User h2User = new H2User(3L, "test");
         userService.removeById(1L);
@@ -568,11 +625,53 @@ class H2UserTest extends BaseTest {
         userService.removeById(h2User, true);
         userService.removeById(h2User, false);
         userService.removeBatchByIds(Arrays.asList(1L, 2L, h2User));
-        userService.removeBatchByIds(Arrays.asList(1L, 2L, h2User),2);
+        userService.removeBatchByIds(Arrays.asList(1L, 2L, h2User), 2);
         userService.removeBatchByIds(Arrays.asList(1L, 2L, h2User), true);
         userService.removeBatchByIds(Arrays.asList(1L, 2L, h2User), false);
-        userService.removeBatchByIds(Arrays.asList(1L, 2L, h2User),2,true);
-        userService.removeBatchByIds(Arrays.asList(1L, 2L, h2User),2,false);
+        userService.removeBatchByIds(Arrays.asList(1L, 2L, h2User), 2, true);
+        userService.removeBatchByIds(Arrays.asList(1L, 2L, h2User), 2, false);
     }
 
+    @Test
+    @Order(25)
+    void testServiceImplInnerLambdaQueryConstructorSetEntity() {
+        H2User condition = new H2User();
+        condition.setName("Tomcat");
+        H2User user = userService.lambdaQuery(condition).one();
+        Assertions.assertNotNull(user);
+        Assertions.assertTrue("Tomcat".equals(user.getName()));
+        H2User h2User = userService.lambdaQuery().setEntity(condition).one();
+        Assertions.assertNotNull(h2User);
+        Assertions.assertTrue("Tomcat".equals(h2User.getName()));
+    }
+
+    @Test
+    @Order(26)
+    void testServiceGetOptById() {
+        H2User user = new H2User(1L, "Evan");
+        userService.save(user);
+        Optional<H2User> optional = userService.getOptById(1L);
+        optional.ifPresent(u -> log(u.toString()));
+    }
+
+    @Test
+    @Order(27)
+    void testServiceGetOneOpt() {
+        userService.getOneOpt(Wrappers.<H2User>lambdaQuery().eq(H2User::getName, "David"))
+            .ifPresent(u -> log(u.toString()));
+    }
+
+    @Test
+    @Order(28)
+    void testServiceGetOneOptThrowEx() {
+        userService.getOneOpt(new LambdaQueryWrapper<H2User>().eq(H2User::getName, "test1"), false)
+            .ifPresent(u -> log(u.toString()));
+
+        userService.getOneOpt(new LambdaQueryWrapper<H2User>().eq(H2User::getName, "test"), false)
+            .ifPresent(u -> log(u.toString()));
+
+        // 异常情况
+        Assertions.assertThrows(TooManyResultsException.class, () -> userService.getOneOpt(Wrappers.<H2User>lambdaQuery()
+            .like(H2User::getName, "tes")));
+    }
 }
